--- a/css/online-casinos.css
+++ b/css/online-casinos.css
@@ -45,7 +45,7 @@
 }
 
 .best-casinos {
-    padding: clamp(40px, 5vw, 60px) 0;
+    padding: clamp(40px, 5vw, 60px) 0 clamp(20px, 5vw, 60px) 0;
 }
 
 .best-casinos__title {
