--- a/css/style.css
+++ b/css/style.css
@@ -1286,6 +1286,53 @@ button {
 	margin-bottom: 5px;
 }
 
+.up-section {
+	background: url('../img/bg-online-casinos.png') center center no-repeat;
+	background-size: cover;
+}
+
+.up-section__wrapper {
+	height: 390px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.up-section__block {
+	text-align: center;
+
+}
+
+.up-section__crochka {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 5px;
+	font-size: 12px;
+	line-height: 150%;
+	color: #fff;
+	margin-bottom: 10px;
+}
+
+.up-section__title {
+	font-weight: 700;
+	font-size: clamp(26px, 2vw, 40px);
+	line-height: 140%;
+	text-transform: uppercase;
+	color: #fff;
+	margin-bottom: 10px;
+}
+
+.up-section__text {
+	font-size: clamp(14px, 2.5vw, 16px);
+	line-height: 150%;
+	color: #fff;
+	max-width: 660px;
+	width: 100%;
+	margin: 0 auto;
+}
+
+
 @media (hover: hover) and (pointer: fine) {
 	.slide:hover .slider__info {
 		opacity: 1;
@@ -1361,9 +1408,34 @@ button {
 	color: #000000;
 	text-align: center;
 	padding-left: 0px;
-	padding-right: 0px;;
+	padding-right: 0px;
 }
-
+.up-section-404{
+	background: url('../img/404-bg.png') center center no-repeat;
+	background-size: cover;
+}
+.up-section__wrapper-404{
+	max-height:680px;
+	height: 75vh;
+}
+.up-section__block-404 img{
+	max-width: 483px;
+	height: 221px;
+	width: 100%;
+	height: 100%;
+}
+.up-section__btn{
+	color: #00192B;
+	background: #FFC700;
+	padding: 12px 50px;
+	border-radius: 12px;
+	font-size: 16px;
+	font-weight: 600;
+	line-height: 140%;
+}
+.up-section__block-404 p{
+	padding-bottom:20px;
+}
 
 @media (max-width: 1250px) {
 	.footer__text {
@@ -1430,6 +1502,9 @@ button {
 @media (max-width: 850px) {
 	.header__list {
 		display: none;
+	}
+	.up-section__block-404 img {
+		max-width: 350px;
 	}
 
 	.header__burger-btn {
@@ -1649,6 +1724,15 @@ button {
 		width: 24px;
 		height: 24px;
 	}
+	.up-section {
+	background: url('../img/bg-online-casinos-mobile.png') center center no-repeat;
+	background-size: cover;
+	}
+	.up-section-404 {
+		background: url('../img/404-bg.png') center center no-repeat;
+		background-size: cover;
+	}
+
 
 }
 
