--- a/css/online-casinos.css
+++ b/css/online-casinos.css
@@ -247,8 +247,8 @@
     margin-bottom: 5px;
 }
 .best-casinos__rating-mob svg{
-   width: 12px;
-   height: 12px;
+   width: 16px;
+   height: 16px;
 }
 .best-casinos__info-mob{
     width: 100%;
@@ -366,8 +366,11 @@
 }
 @media (max-width: 400px) {
     .best-casinos__rating-mob svg{
-        width: 10px;
-        height: 10px;
+        width: 12px;
+        height: 12px;
+    }
+    .best-casinos__title-mob{
+        font-size: 15px;
     }
 
 }
