--- a/css/online-casinos.css
+++ b/css/online-casinos.css
@@ -244,7 +244,7 @@
     justify-content: space-between;
     align-items: center;
     gap: 0;
-    margin-bottom: 5px;
+    /* margin-bottom: 5px; */
 }
 .best-casinos__rating-mob svg{
    width: 16px;
