--- a/css/style.css
+++ b/css/style.css
@@ -757,6 +757,9 @@ button {
 	background: #295374;
 	border: none;
 }
+.wrapper-dock-text-block .title__text-block{
+	font-size: clamp(22px, 2vw, 26px);
+}
 
 .title__why-demo,
 .title__real-money {
