--- a/css/style.css
+++ b/css/style.css
@@ -1338,6 +1338,7 @@ button {
 	text-transform: uppercase;
 	color: #fff;
 	margin-bottom: 10px;
+	text-shadow: 0px 4px 12px #000000A8;
 }
 
 .up-section__text {
