--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,10 @@ button {
 }
 
 .section {
-	padding: clamp(20px, 1vw, 30px) 0px;
+	padding: clamp(20px, 4vw, 40px) 0px;
+}
+.fisrt-section{
+	padding-top: clamp(40px,5vw,60px);
 }
 
 .container {
@@ -1159,9 +1162,6 @@ button {
 }
 
 
-.sliders {
-	padding: clamp(40px, 1vw, 60px) 0px clamp(20px, 1vw, 60px) 0px;
-}
 
 .sliders__content {
 	padding: clamp(20px, 1vw, 30px);
@@ -1285,6 +1285,9 @@ button {
 	background: #103956DB;
 	aspect-ratio: 1 / 1;
 	backdrop-filter: blur(9.699999809265137px)
+}
+.up-info__wrapper {
+	padding-bottom: clamp(10px, 2.5vw,20px);
 }
 .up-info__title {
 	font-size: clamp(26px, 2.5vw, 36px);
