--- a/css/online-casinos.css
+++ b/css/online-casinos.css
@@ -108,6 +108,7 @@
 
 .best-casinos__left {
     display: flex;
+    flex: 0 0 270px;
     align-items: center;
     gap: clamp(5px,1.2vw,30px);
 }
@@ -161,6 +162,7 @@
     font-size: 10px;
 }
 .best-casinos__text-item{
+    justify-items: start;
     padding: 8px 12px;
     padding: clamp(4px,0.5vw,8px) clamp(4px,0.5vw,12px);
     border-radius: 12px;
@@ -170,8 +172,10 @@
     font-weight: 500;
     color: #fff;
     background: #2F5776;
-    max-width: 400px;
-    margin: 0 auto;
+    margin-right: auto;
+    width: 335px;
+    margin-left: 8%;
+
 }
 .best-casinos__links{
     display: flex;
@@ -291,6 +295,13 @@
     color: #280F23;
 }
 
+@media (max-width: 1200px) {
+    .best-casinos__text-item{
+        margin-left: 5%;
+        width: 300px;
+    }
+}
+
 @media (max-width: 1100px) {
     .best-casinos__text-item {
         max-width: 200px;
@@ -322,15 +333,30 @@
     .best-casinos__main-info{
         gap: 0px;
     }
+    .best-casinos__text-item {
+             margin-left: 0%;
+             width: 300px;
+    }
+    .best-casinos__left{
+        flex: 0 0 200px
+    }
     
+}
+@media (max-width: 800px) {
+    .best-casinos__text-item {
+            width: 170px;
+    }
 }
 @media (max-width: 750px) {
     .best-casinos__text-item{
-        width: 150px;
+        width: 125px;
     }
     .best-casinos__img{
         width: 60px;
         height: 60px;
+    }
+    .best-casinos__left{
+        flex: 0 0  190px;
     }
 }
 
