--- a/css/style.css
+++ b/css/style.css
@@ -1341,7 +1341,7 @@ a.text__line-block{
 	font-weight: 700;
 	font-size: clamp(26px, 3vw, 40px);
 	line-height: 140%;
-	text-transform: uppercase;
+	text-transform: capitalize;
 	color: #fff;
 	margin-bottom: 10px;
 	text-shadow: 0px 4px 12px #000000A8;
