--- a/css/style.css
+++ b/css/style.css
@@ -1417,7 +1417,8 @@ a.text__line-block {
 	text-decoration: none;
 	transition: color 0.2s ease;
 }
-.up-info__wrapper .breadcrumbs ol{
+.up-info__wrapper .breadcrumbs ol,
+.contact-form__wrapper .breadcrumbs ol{
 	justify-content: start;
 	
 }
