--- a/css/contact.css
+++ b/css/contact.css
@@ -62,6 +62,7 @@
     overflow-y: hidden;
     min-height: 150px;
     max-height: 400px;
+    margin-bottom: 10px;
 }
 
 .switch {
@@ -87,8 +88,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #163657;
-    /* тёмно-синий фон */
+    background: #295374;
     border-radius: 20px;
     transition: 0.3s;
 }
@@ -101,33 +101,28 @@
     width: 14px;
     left: 4px;
     top: 4px;
-    background-color: #768b6e;
-    /* серо-зелёный кружок */
+    background: #FFD7004D;
     border-radius: 50%;
     transition: 0.3s;
 }
 
 /* состояние checked */
 input:checked+.slider {
-    background-color: #ffd700;
-    /* жёлтый фон при активации */
+    background: #295374;
 }
 
 input:checked+.slider::before {
     transform: translateX(18px);
-    /* сдвигаем кружок вправо */
+    background: #FFD700;
 }
 
 .terms-text {
-    font-family: "Poppins", sans-serif;
-    font-size: 16px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 140%;
     color: #fff;
 }
 
-.terms-text a {
-    color: #cbd5e1;
-    text-decoration: underline;
-}
 
 .conract-form__info-content{
     padding: 30px;
@@ -182,4 +177,19 @@ input:checked+.slider::before {
     height: 15px;
     flex: 0 0 auto;
     display: inline-block;
+}
+.contact-form__checkBocks{
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+.contact-form__btn{
+    padding: 12px 60px;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 150%;
+    color: #000000;
+    background: #FFD700;
+    border-radius: 10px;
+    margin: 0 auto;
 }
