--- a/css/contact.css
+++ b/css/contact.css
@@ -1,29 +1,28 @@
 .contact-form__line{
     display: flex;
     justify-content: space-between;
+    gap:20px;
 }
 .contact-form__title{
-    font-size: clamp(22px, 2.5vw, 36px);
+    font-size: clamp(26px, 2.5vw, 36px);
     font-weight: 700;
     line-height: 110%;
-    margin-bottom: clamp(5px, 2vw, 10px);
+    margin-bottom: 10px;
     color: #fff;
 }
 .contact-form__text{
-    font-size: clamp(14px, 3vw, 16px);
+    font-size: clamp(12px, 2vw, 16px);
     font-weight: 400;
     line-height: 140%;
-    margin-bottom: clamp(5px, 3vw, 15px);
+    margin-bottom: clamp(10px, 3vw, 15px);
     color: #fff;
 }
 .contact-form__form-line{
     display: flex;
-    margin-bottom: clamp(5px, 2vw, 10px);
+    margin-bottom: 10px;
+    gap: 10px;
 }
-.contact-form__input-block + 
-.contact-form__input-block{
-    padding-left:8px;
-}
+
 .contact-form__input-block{
     display: flex;
     flex-direction: column;
@@ -47,8 +46,10 @@
     outline: none;
     width: 100%;
 }
-.contact-form__input-block input::placeholder{
+.contact-form__input-block input::placeholder,
+.contact-form__input-block textarea::placeholder{
     color: #5E778A;
+    font-family: 'Poppins', sans-serif;
 }
 .contact-form__input-name{
     flex: 0 0 40%
@@ -81,7 +82,7 @@
 }
 
 /* бегунок */
-.slider {
+.slider-checkbox {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -94,7 +95,7 @@
 }
 
 /* кружок внутри */
-.slider::before {
+.slider-checkbox::before {
     content: "";
     position: absolute;
     height: 14px;
@@ -107,11 +108,11 @@
 }
 
 /* состояние checked */
-input:checked+.slider {
+input:checked+.slider-checkbox {
     background: #295374;
 }
 
-input:checked+.slider::before {
+input:checked+.slider-checkbox::before {
     transform: translateX(18px);
     background: #FFD700;
 }
@@ -132,10 +133,10 @@ input:checked+.slider::before {
 }
 .contact-form__info-title{
     display: block;
-    font-size: clamp(16px, 2.5vw, 22px);
+    font-size: clamp(18px, 2.5vw, 22px);
     font-weight: 500;
     line-height: 140%;
-    margin-bottom: clamp(5px, 2vw, 15px);
+    margin-bottom: 15px;
     color: #fff;
 }
 .contact-form__info-line{
@@ -145,7 +146,7 @@ input:checked+.slider::before {
     margin-bottom: 10px;
 }
 .contact-form__info-line span{
-    font-size: 16px;
+    font-size: clamp(14px,2vw,16px);
     font-weight: 400;
     line-height: 140%;
     color: #fff;
@@ -167,12 +168,12 @@ input:checked+.slider::before {
     border-radius: 10px;
 }
 .contact-form__info-btn span{
-    font-size: 16px;
+    font-size: clamp(14px,2vw,16px);
     font-weight: 500;
     line-height: 150%;
     color: #fff;
 }
-.contact-form__info-btn  svg{
+.contact-form__info-btn svg{
     width: 15px;
     height: 15px;
     flex: 0 0 auto;
@@ -184,7 +185,7 @@ input:checked+.slider::before {
     margin-bottom: 10px;
 }
 .contact-form__btn{
-    padding: 12px 60px;
+    padding: 6px 60px;
     font-size: 16px;
     font-weight: 600;
     line-height: 150%;
@@ -192,4 +193,20 @@ input:checked+.slider::before {
     background: #FFD700;
     border-radius: 10px;
     margin: 0 auto;
+}
+@media(max-width: 650px) {
+    .contact-form__line{
+        flex-direction: column;
+    }
+    .contact-form__form-line{
+        flex-direction: column;
+    }
+    .contact-form__input-name,
+    .contact-form__input-email{
+        flex: 0 0 100%;
+    }
+    .contact-form__text{
+        width: 210px;
+    }
+    
 }
