--- a/css/free-pokies.css
+++ b/css/free-pokies.css
@@ -128,13 +128,17 @@
 .game-all__line-filter {
     display: flex;
     justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 20px;
 }
 
 .game-all__filter-slider {
     display: flex;
     align-items: center;
     gap: 10px;
-    max-width: 850px;
+    width: 100%;
+    overflow: hidden;
+        /* чтобы растягивался */
 }
 
 .game-all-btn {
@@ -147,19 +151,25 @@
     width: 8px;
     stroke: #B5BFC7;
 }
+.game-all-btn.active svg {
+    stroke: #FFD700;
+}
 .game-all__slider-wrapper {
     display: flex;
         flex-wrap: nowrap;
         overflow: hidden;
         gap: 10px;
-        box-sizing: border-box;
-    
         scroll-behavior: smooth;
-        /* плавная прокрутка */
-}
+    }
 .game-all__slider-wrapper,
 .game-all__slider-item {
     box-sizing: border-box;
+    
+}
+.game-all__slider{
+    overflow: hidden;
+    max-width: 800px;
+    width: 100%;
 }
 
 .game-all__slider-item {
@@ -171,6 +181,9 @@
     color: #9BADBB;
     border-radius: 10px;
     flex: 0 0 auto;
+}
+game-all__slider-item.active {
+    color: #FFD700;
 }
 
 .game-all__provider {
@@ -254,8 +267,39 @@
     line-height: 140%;
     
 }
-
-
+.game-all__list-item{
+    display: flex;
+    flex-wrap: wrap;
+    background: #113047;
+    padding: 30px;
+    border-radius: 20px;
+    gap:10px;
+}
+.game-all__item-game{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 12px;
+    border: 1px solid #57626C;
+    background: #092A44;
+    flex: 0 calc(20% - 10px);
+    padding: 20px;
+    gap: 10px;
+    
+}
+.game-all__item-game img{
+   height: auto;
+   width: 100%;
+   aspect-ratio: 1/1;
+    object-fit: cover;
+    border-radius: 12px;
+}
+.game-all__item-game span{
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 140%;
+    color: #ffffff;
+}
 
 
 @media(max-width:1250px) {
