--- a/css/style.css
+++ b/css/style.css
@@ -81,8 +81,8 @@ button {
 
 .container {
 	position: relative;
-	max-width: 1500px;
-	padding: 0 15px;
+	max-width: 1440px;
+	padding: 0 clamp(12px, 3vw, 42px);
 	margin: 0 auto;
 }
 .container-mini {
