--- a/css/free-pokies.css
+++ b/css/free-pokies.css
@@ -135,7 +135,7 @@
 .game-all__filter-slider {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 15px;
     width: 100%;
     overflow: hidden;
         /* чтобы растягивался */
@@ -156,11 +156,23 @@
 }
 .game-all__slider-wrapper {
     display: flex;
-        flex-wrap: nowrap;
-        overflow: hidden;
-        gap: 10px;
-        scroll-behavior: smooth;
-    }
+    flex-wrap: nowrap;
+    overflow: hidden;
+    gap: 10px;
+    scroll-behavior: smooth;
+    position: relative;
+}
+.game-all__slider-wrapper::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: var(--after-width, 100px);
+    height: 100%;
+    pointer-events: none;
+    background: linear-gradient(90deg, rgb(27 56 76 / 0%) 0%, #02111b 100%);
+}
+
 .game-all__slider-wrapper,
 .game-all__slider-item {
     box-sizing: border-box;
@@ -168,7 +180,7 @@
 }
 .game-all__slider{
     overflow: hidden;
-    max-width: 800px;
+    /* max-width: 800px; */
     width: 100%;
 }
 
@@ -188,7 +200,7 @@ game-all__slider-item.active {
 
 .game-all__provider {
     position: relative;
-    flex: 0 0 30%;
+    flex: 0 0 33.5%;
     
 }
 
@@ -273,7 +285,7 @@ game-all__slider-item.active {
     background: #113047;
     padding: 30px;
     border-radius: 20px;
-    gap:10px;
+    row-gap: 10px;
 }
 .game-all__item-game{
     display: flex;
@@ -285,6 +297,7 @@ game-all__slider-item.active {
     flex: 0 calc(20% - 10px);
     padding: 20px;
     gap: 10px;
+    margin: 0 10px;
     
 }
 .game-all__item-game img{
