--- a/css/free-pokies.css
+++ b/css/free-pokies.css
@@ -170,7 +170,7 @@
     width: var(--after-width, 100px);
     height: 100%;
     pointer-events: none;
-    background: linear-gradient(90deg, rgb(27 56 76 / 0%) 0%, #02111b 100%);
+    background: linear-gradient(90deg, rgba(0, 25, 43, 0) 29.33%, rgba(0, 25, 43, 0.752885) 82.69%, rgba(0, 25, 43, 0.9) 100%);
 }
 
 .game-all__slider-wrapper,
@@ -283,33 +283,37 @@ game-all__slider-item.active {
     display: flex;
     flex-wrap: wrap;
     background: #113047;
-    padding: 30px;
+    padding: 30px 20px;
     border-radius: 20px;
-    row-gap: 10px;
+    row-gap: 20px;
 }
 .game-all__item-game{
+    flex: 0 20%;
+    padding: 0 10px;
+}
+.game-all__item-content{
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 12px;
     border: 1px solid #57626C;
     background: #092A44;
-    flex: 0 calc(20% - 10px);
-    padding: 20px;
+    flex: 0 20%;
+    padding: clamp(10px,1.5vw,20px);
     gap: 10px;
-    margin: 0 10px;
-    
+
 }
 .game-all__item-game img{
    height: auto;
    width: 100%;
+   max-width: 200px;
    aspect-ratio: 1/1;
     object-fit: cover;
     border-radius: 12px;
 }
 .game-all__item-game span{
-    font-size: 18px;
-    font-weight: 500;
+    font-size: clamp(14px,2vw,18px);
+    font-weight: 400;
     line-height: 140%;
     color: #ffffff;
 }
@@ -322,6 +326,9 @@ game-all__slider-item.active {
 
     .hot-offers__card-info span {
         font-size: 13px;
+    }
+    .game-all__item-game {
+        flex: 0 25%;
     }
 }
 
@@ -348,14 +355,31 @@ game-all__slider-item.active {
     }
     .game-all__slider-wrapper {
         overflow-x: auto;
-        /* включаем горизонтальный скролл пальцем */
         -webkit-overflow-scrolling: touch;
-        /* плавный скролл на iOS */
     }
 
     .game-all__slider-wrapper::-webkit-scrollbar {
         display: none;
-        /* скрываем полоску прокрутки */
+    }
+
+    .game-all__item-game {
+        flex: 0 33.33%;
+    }
+    
+}
+@media(max-width: 700px) {
+    .game-all__list-item{
+        padding: 10px 5px;
+        row-gap: 10px;
+    }
+    .game-all__item-game {
+        padding: 0 5px;
+    }
+    .game-all__item-content{
+
+    }
+    .game-all__line-filter{
+        flex-direction: column;
     }
 }
 
@@ -375,7 +399,13 @@ game-all__slider-item.active {
     .hot-offers__card img {
         height: 120px;
     }
-
-
+    .game-all__item-game{
+        flex: 0 50%;
+        padding: 0 2.5px;
+    }
+    .game-all__list-item {
+        padding-left: 7.5px;
+        padding-right:7.5px;
+    }
 
 }
