--- a/css/free-pokies.css
+++ b/css/free-pokies.css
@@ -291,6 +291,10 @@ game-all__slider-item.active {
 .game-all__item-game{
     flex: 0 20%;
     padding: 0 10px;
+    position: relative;
+}
+.game-all__item-game:hover .game-all__item-hover{
+    opacity: 1;
 }
 .game-all__item-content{
     display: flex;
@@ -318,7 +322,29 @@ game-all__slider-item.active {
     line-height: 140%;
     color: #ffffff;
 }
-
+.game-all__item-hover{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #011320CC;
+    backdrop-filter: blur(6.099999904632568px);
+    opacity: 0;
+    transition: all 0.3s ease;
+    z-index: 2;
+    border-radius: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 0px 19.7px 0px #FFC700B2;
+}
+.game-all__item-link{
+    font-size: clamp(14px,2vw,18px);
+    font-weight: 600;
+    padding: 12px 30px;
+    border-radius: 10px;
+}
 
 @media(max-width:1250px) {
     .hot-offers__card-link {
